--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<meta http-equiv="refresh" content="0.1;url="https://kndxhz.github.io/Japanesefilm">
+＜script language="javascript" type="text/javascript"＞
+
+    window.location.href("https://kndxhz.github.io/Japanesefilm");
+
+＜/script＞
