--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-＜script language="javascript" type="text/javascript"＞
-
-    window.location.href("https://kndxhz.github.io/Japanesefilm");
-
-＜/script＞
+<meta http-equiv="refresh" content="0.1;url="https://kndxhz.github.io/Japanesefilm">
