--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0.1;url="https://kndxhz.github.io/Japanesefilm">
+<meta http-equiv="refresh" content="0.1";url="https://kndxhz.github.io/Japanesefilm">
